--- a/indexEcom.html
+++ b/indexEcom.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cind-ecom</title>
- <!-- <link rel="icon" href="images/sokobar2.png" type="image/icon type">  -->
   <link rel="stylesheet" href="./indexEcom.css"> 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,8 +30,8 @@
           <ul>
             <li><a href="#">Home</a></li>
             <li><a href="product.html">Product</a></li>
-            <li><a href="">Contact</a></li>
-            <li><a href="">About Us</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="about.html">About Us</a></li>
             <li><a href="">Review</a></li>
           </ul>
         </nav>
